// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Stack] navigator should renders [Dark] mode 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                handlerTag={2}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "alignItems": "center",
                              "alignSelf": "stretch",
                              "backgroundColor": "black",
                              "flexBasis": 0,
                              "flexDirection": "column",
                              "flexGrow": 1,
                              "flexShrink": 1,
                              "justifyContent": "flex-start",
                              "overflow": "hidden",
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "flexDirection": "column",
                                "height": "100%",
                                "justifyContent": "flex-start",
                                "width": "100%",
                              },
                              undefined,
                            ]
                          }
                        >
                          <Text
                            style={
                              [
                                {
                                  "color": "white",
                                  "fontSize": 18,
                                  "lineHeight": 27,
                                },
                                {
                                  "marginTop": 100,
                                },
                              ]
                            }
                          />
                          <Text
                            style={
                              [
                                {
                                  "color": "white",
                                  "fontSize": 18,
                                  "lineHeight": 27,
                                },
                                undefined,
                              ]
                            }
                          />
                          <Text
                            style={
                              [
                                {
                                  "color": "white",
                                  "fontSize": 18,
                                  "lineHeight": 27,
                                },
                                undefined,
                              ]
                            }
                          />
                        </View>
                        <View
                          style={
                            [
                              {
                                "alignSelf": "center",
                                "bottom": 40,
                                "flexDirection": "column",
                                "position": "absolute",
                                "width": "72%",
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            accessibilityState={
                              {
                                "disabled": false,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "opacity": 1,
                              }
                            }
                            testID="btn-login"
                          >
                            <View
                              onLayout={[Function]}
                              outlined={false}
                              style={
                                [
                                  {
                                    "backgroundColor": "white",
                                    "borderBottomColor": "white",
                                    "borderLeftColor": "white",
                                    "borderRightColor": "white",
                                    "borderTopColor": "white",
                                  },
                                  [
                                    {
                                      "alignItems": "center",
                                      "alignSelf": "stretch",
                                      "borderBottomLeftRadius": 20,
                                      "borderBottomRightRadius": 20,
                                      "borderTopLeftRadius": 20,
                                      "borderTopRightRadius": 20,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingBottom": 10,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 10,
                                    },
                                    [
                                      undefined,
                                      false,
                                      undefined,
                                    ],
                                  ],
                                ]
                              }
                              testID="button-container"
                              type="primary"
                            >
                              <Image
                                source={
                                  {
                                    "canInstrument": true,
                                    "createTransformer": [Function],
                                    "getCacheKey": [Function],
                                    "process": [Function],
                                  }
                                }
                                style={
                                  {
                                    "height": 24,
                                    "left": 12,
                                    "position": "absolute",
                                    "width": 24,
                                  }
                                }
                              />
                              <Text
                                outlined={false}
                                style={
                                  [
                                    {
                                      "color": "black",
                                    },
                                    [
                                      undefined,
                                      undefined,
                                    ],
                                  ]
                                }
                                type="primary"
                              >
                                Login
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "marginTop": 12,
                              }
                            }
                          />
                          <View
                            accessibilityState={
                              {
                                "disabled": false,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "opacity": 1,
                              }
                            }
                            testID="btn-navigate"
                          >
                            <View
                              onLayout={[Function]}
                              outlined={false}
                              style={
                                [
                                  {
                                    "backgroundColor": "white",
                                    "borderBottomColor": "white",
                                    "borderLeftColor": "white",
                                    "borderRightColor": "white",
                                    "borderTopColor": "white",
                                  },
                                  [
                                    {
                                      "alignItems": "center",
                                      "alignSelf": "stretch",
                                      "borderBottomLeftRadius": 20,
                                      "borderBottomRightRadius": 20,
                                      "borderTopLeftRadius": 20,
                                      "borderTopRightRadius": 20,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingBottom": 10,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 10,
                                    },
                                    [
                                      undefined,
                                      false,
                                      undefined,
                                    ],
                                  ],
                                ]
                              }
                              testID="button-container"
                              type="primary"
                            >
                              <Text
                                outlined={false}
                                style={
                                  [
                                    {
                                      "color": "black",
                                    },
                                    [
                                      undefined,
                                      undefined,
                                    ],
                                  ]
                                }
                                type="primary"
                              >
                                Navigate to Temp
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "marginTop": 12,
                              }
                            }
                          />
                          <View
                            accessibilityState={
                              {
                                "disabled": false,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "opacity": 1,
                              }
                            }
                            testID="btn-theme"
                          >
                            <View
                              onLayout={[Function]}
                              outlined={false}
                              style={
                                [
                                  {
                                    "backgroundColor": "white",
                                    "borderBottomColor": "white",
                                    "borderLeftColor": "white",
                                    "borderRightColor": "white",
                                    "borderTopColor": "white",
                                  },
                                  [
                                    {
                                      "alignItems": "center",
                                      "alignSelf": "stretch",
                                      "borderBottomLeftRadius": 20,
                                      "borderBottomRightRadius": 20,
                                      "borderTopLeftRadius": 20,
                                      "borderTopRightRadius": 20,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingBottom": 10,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 10,
                                    },
                                    [
                                      undefined,
                                      false,
                                      undefined,
                                    ],
                                  ],
                                ]
                              }
                              testID="button-container"
                              type="primary"
                            >
                              <Text
                                outlined={false}
                                style={
                                  [
                                    {
                                      "color": "black",
                                    },
                                    [
                                      undefined,
                                      undefined,
                                    ],
                                  ]
                                }
                                type="primary"
                              >
                                Change theme
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                    <View
                      collapsable={false}
                      pointerEvents="box-none"
                      style={{}}
                    >
                      <View
                        accessibilityElementsHidden={false}
                        importantForAccessibility="auto"
                        onLayout={[Function]}
                        pointerEvents="box-none"
                        style={null}
                      >
                        <View
                          collapsable={false}
                          pointerEvents="box-none"
                          style={
                            {
                              "bottom": 0,
                              "left": 0,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                              "zIndex": 0,
                            }
                          }
                        >
                          <View
                            collapsable={false}
                            style={
                              {
                                "backgroundColor": "black",
                                "borderBottomColor": "rgb(216, 216, 216)",
                                "flex": 1,
                                "shadowColor": "rgb(216, 216, 216)",
                                "shadowOffset": {
                                  "height": 0.5,
                                  "width": 0,
                                },
                                "shadowOpacity": 0.85,
                                "shadowRadius": 0,
                              }
                            }
                          />
                        </View>
                        <View
                          collapsable={false}
                          pointerEvents="box-none"
                          style={
                            {
                              "height": 44,
                              "maxHeight": undefined,
                              "minHeight": undefined,
                              "opacity": undefined,
                              "transform": undefined,
                            }
                          }
                        >
                          <View
                            pointerEvents="none"
                            style={
                              {
                                "height": 0,
                              }
                            }
                          />
                          <View
                            pointerEvents="box-none"
                            style={
                              {
                                "alignItems": "stretch",
                                "flex": 1,
                                "flexDirection": "row",
                              }
                            }
                          >
                            <View
                              collapsable={false}
                              pointerEvents="box-none"
                              style={
                                {
                                  "alignItems": "flex-start",
                                  "flexBasis": 0,
                                  "flexGrow": 1,
                                  "justifyContent": "center",
                                  "marginStart": 0,
                                }
                              }
                            />
                            <View
                              collapsable={false}
                              pointerEvents="box-none"
                              style={
                                {
                                  "justifyContent": "center",
                                  "marginHorizontal": 16,
                                  "maxWidth": 718,
                                }
                              }
                            >
                              <Text
                                accessibilityRole="header"
                                aria-level="1"
                                collapsable={false}
                                numberOfLines={1}
                                onLayout={[Function]}
                                style={
                                  {
                                    "color": "white",
                                    "fontSize": 17,
                                    "fontWeight": "600",
                                  }
                                }
                              >
                                Intro
                              </Text>
                            </View>
                            <View
                              collapsable={false}
                              pointerEvents="box-none"
                              style={
                                {
                                  "alignItems": "flex-end",
                                  "flexBasis": 0,
                                  "flexGrow": 1,
                                  "justifyContent": "center",
                                  "marginEnd": 0,
                                }
                              }
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "height": 44,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          }
        }
      />
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`[Stack] navigator should renders without crashing 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "white",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "black",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  Intro
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                handlerTag={1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "alignItems": "center",
                              "alignSelf": "stretch",
                              "backgroundColor": "white",
                              "flexBasis": 0,
                              "flexDirection": "column",
                              "flexGrow": 1,
                              "flexShrink": 1,
                              "justifyContent": "flex-start",
                              "overflow": "hidden",
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "flexDirection": "column",
                                "height": "100%",
                                "justifyContent": "flex-start",
                                "width": "100%",
                              },
                              undefined,
                            ]
                          }
                        >
                          <Text
                            style={
                              [
                                {
                                  "color": "black",
                                  "fontSize": 18,
                                  "lineHeight": 27,
                                },
                                {
                                  "marginTop": 100,
                                },
                              ]
                            }
                          />
                          <Text
                            style={
                              [
                                {
                                  "color": "black",
                                  "fontSize": 18,
                                  "lineHeight": 27,
                                },
                                undefined,
                              ]
                            }
                          />
                          <Text
                            style={
                              [
                                {
                                  "color": "black",
                                  "fontSize": 18,
                                  "lineHeight": 27,
                                },
                                undefined,
                              ]
                            }
                          />
                        </View>
                        <View
                          style={
                            [
                              {
                                "alignSelf": "center",
                                "bottom": 40,
                                "flexDirection": "column",
                                "position": "absolute",
                                "width": "72%",
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            accessibilityState={
                              {
                                "disabled": false,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "opacity": 1,
                              }
                            }
                            testID="btn-login"
                          >
                            <View
                              onLayout={[Function]}
                              outlined={false}
                              style={
                                [
                                  {
                                    "backgroundColor": "black",
                                    "borderBottomColor": "black",
                                    "borderLeftColor": "black",
                                    "borderRightColor": "black",
                                    "borderTopColor": "black",
                                  },
                                  [
                                    {
                                      "alignItems": "center",
                                      "alignSelf": "stretch",
                                      "borderBottomLeftRadius": 20,
                                      "borderBottomRightRadius": 20,
                                      "borderTopLeftRadius": 20,
                                      "borderTopRightRadius": 20,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingBottom": 10,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 10,
                                    },
                                    [
                                      undefined,
                                      false,
                                      undefined,
                                    ],
                                  ],
                                ]
                              }
                              testID="button-container"
                              type="primary"
                            >
                              <Image
                                source={
                                  {
                                    "canInstrument": true,
                                    "createTransformer": [Function],
                                    "getCacheKey": [Function],
                                    "process": [Function],
                                  }
                                }
                                style={
                                  {
                                    "height": 24,
                                    "left": 12,
                                    "position": "absolute",
                                    "width": 24,
                                  }
                                }
                              />
                              <Text
                                outlined={false}
                                style={
                                  [
                                    {
                                      "color": "white",
                                    },
                                    [
                                      undefined,
                                      undefined,
                                    ],
                                  ]
                                }
                                type="primary"
                              >
                                Login
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "marginTop": 12,
                              }
                            }
                          />
                          <View
                            accessibilityState={
                              {
                                "disabled": false,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "opacity": 1,
                              }
                            }
                            testID="btn-navigate"
                          >
                            <View
                              onLayout={[Function]}
                              outlined={false}
                              style={
                                [
                                  {
                                    "backgroundColor": "black",
                                    "borderBottomColor": "black",
                                    "borderLeftColor": "black",
                                    "borderRightColor": "black",
                                    "borderTopColor": "black",
                                  },
                                  [
                                    {
                                      "alignItems": "center",
                                      "alignSelf": "stretch",
                                      "borderBottomLeftRadius": 20,
                                      "borderBottomRightRadius": 20,
                                      "borderTopLeftRadius": 20,
                                      "borderTopRightRadius": 20,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingBottom": 10,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 10,
                                    },
                                    [
                                      undefined,
                                      false,
                                      undefined,
                                    ],
                                  ],
                                ]
                              }
                              testID="button-container"
                              type="primary"
                            >
                              <Text
                                outlined={false}
                                style={
                                  [
                                    {
                                      "color": "white",
                                    },
                                    [
                                      undefined,
                                      undefined,
                                    ],
                                  ]
                                }
                                type="primary"
                              >
                                Navigate to Temp
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              {
                                "marginTop": 12,
                              }
                            }
                          />
                          <View
                            accessibilityState={
                              {
                                "disabled": false,
                              }
                            }
                            accessible={true}
                            collapsable={false}
                            focusable={true}
                            onClick={[Function]}
                            onResponderGrant={[Function]}
                            onResponderMove={[Function]}
                            onResponderRelease={[Function]}
                            onResponderTerminate={[Function]}
                            onResponderTerminationRequest={[Function]}
                            onStartShouldSetResponder={[Function]}
                            style={
                              {
                                "opacity": 1,
                              }
                            }
                            testID="btn-theme"
                          >
                            <View
                              onLayout={[Function]}
                              outlined={false}
                              style={
                                [
                                  {
                                    "backgroundColor": "black",
                                    "borderBottomColor": "black",
                                    "borderLeftColor": "black",
                                    "borderRightColor": "black",
                                    "borderTopColor": "black",
                                  },
                                  [
                                    {
                                      "alignItems": "center",
                                      "alignSelf": "stretch",
                                      "borderBottomLeftRadius": 20,
                                      "borderBottomRightRadius": 20,
                                      "borderTopLeftRadius": 20,
                                      "borderTopRightRadius": 20,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                      "paddingBottom": 10,
                                      "paddingLeft": 20,
                                      "paddingRight": 20,
                                      "paddingTop": 10,
                                    },
                                    [
                                      undefined,
                                      false,
                                      undefined,
                                    ],
                                  ],
                                ]
                              }
                              testID="button-container"
                              type="primary"
                            >
                              <Text
                                outlined={false}
                                style={
                                  [
                                    {
                                      "color": "white",
                                    },
                                    [
                                      undefined,
                                      undefined,
                                    ],
                                  ]
                                }
                                type="primary"
                              >
                                Change theme
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
